# pupsis.py

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  LICENSE.md  PRIVACY-POLICY.md  README.md  pyproject.toml  readme.md  requirements.txt  setup.py  test.py
pupsis/: __init__.py  api.py  errors.py  pupsis.py  rest.py
pupsis/scraper/: grades.py  status.py
pupsis/scrapers/: grades.py  schedule.py
pupsis/utils/: __init__.py  logs.py  types.py
tests/: README.md  grades.py  scheds.py
tests/assets/: saved_paged.html
