[project]
name = "pupsis-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio==4.8.0",
    "certifi==2025.1.31",
    "colorama==0.4.6",
    "h11==0.14.0",
    "hishel==0.1.1",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "python-dotenv==1.0.1",
    "selectolax==0.3.27",
    "setuptools==75.8.0",
    "sniffio==1.3.1",
]
